--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* GENERAL */
 *{
   margin: 0;
   padding: 0;
@@ -6,18 +7,47 @@
 
 body{
   background-color: black;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+a{
+  text-decoration: none;
+  color: white;
+}
+
+/* HEADER */
 header{
   height: 50px;
+  position: relative;
 }
 
+.box{
+  position: absolute;
+  top: 4px;
+  right: 5px;
+}
+
+.box .button{
+  display: inline-block;
+  background-color: #4A4A4A;
+  text-align: center;
+  padding: 6px;
+  border-radius: 6px;
+  margin: 2px;
+}
+/* ------ */
+
+/* MAIN */
 main{
   height: calc(100vh - 130px);
   overflow-y: auto;
 }
+/* ------ */
 
+/* FOOTER */
 footer{
   height: 80px;
   background-color: #222222;
 }
+/* ------ */
