--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,50 @@ main{
   height: calc(100vh - 130px);
   overflow-y: auto;
 }
+
+.container{
+  width: 98%;
+  margin: 0 auto;
+}
+
+.camera{
+  width: 250px;
+  height: 150px;
+  background-color: red;
+  position: relative;
+}
+
+.camera img{
+  width: 100%;
+  height: 100%;
+}
+
+.camera .camera-descr{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .4);
+  padding: 6px;
+  font-size: 0.9rem;
+}
 /* ------ */
 
 /* FOOTER */
 footer{
   height: 80px;
   background-color: #222222;
+}
+/* ------ */
+
+/* UTILITY */
+.d-flex{
+  display: flex;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 16px;
+  column-gap: 6px;
 }
 /* ------ */
