--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header{
   right: 5px;
 }
 
-.box .button{
+header .button{
   display: inline-block;
   background-color: #4A4A4A;
   text-align: center;
@@ -76,11 +76,38 @@ footer{
   height: 80px;
   background-color: #222222;
 }
+
+footer .button{
+  background-color: yellow;
+  height: 80px;
+  padding: 10px;
+  text-align: center;
+}
+
+footer .button a i{
+  font-size: 2.4rem;
+  margin-bottom: 4px;
+}
+
+footer .button a p{
+  font-weight: bold;
+}
+
+footer .button.arrow-up a i{
+  font-size: 1.2rem;
+  margin-bottom: 0px;
+  line-height: 60px;
+}
 /* ------ */
 
 /* UTILITY */
 .d-flex{
   display: flex;
+}
+
+.flex-btw{
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flex-wrap{
