[ADD] active effect in header button

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ header .h-button{
   border-radius: 6px;
   margin: 2px;
 }
+
+header .h-button:active{
+  background-color: #333333;
+}
 /* ------ */
 
 /* MAIN */
